fix: removed unnecessary [] from swagger getList's doc
