# docs/swagger.yaml
@@ -192,9 +192,7 @@ paths:
           description: OK
           schema:
             items:
-              items:
-                $ref: '#/definitions/dto.GetSongsListResponse'
-              type: array
+              $ref: '#/definitions/dto.GetSongsListResponse'
             type: array
         "400":
           description: Bad Request
